<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UK Shia Salaat Times</string>
    <string name="action_settings">Settings</string>
    <string name="imsaak">Imsaak</string>
    <string name="fajr">Fajr</string>
    <string name="sunrise">Sunrise</string>
    <string name="zohr">Zohr</string>
    <string name="sunset">Sunset</string>
    <string name="maghrib">Maghrib</string>
    <string name="tomorrowfajr">Tomorrow Fajr</string>
    <string name="action_london">London</string>
    <string name="action_birmingham">Birmingham</string>
    <string name="action_peterborough">Peterborough</string>
    <string name="action_leicester">Leicester</string>
    <string name="action_uselocation">GPS location</string>
    <string name="action_choosedate">Choose date</string>
    <string name="add_widget">Add widget</string>
    <string name="provider_London">Times provided by KSIMC of London</string>
    <string name="provider_Birmingham">Times provided by KSIMC of Birmingham</string>
    <string name="provider_Peterborough">Times provided by Husaini Islamic Center Peterborough</string>
    <string name="provider_Leicester">Times provided by Masjid Al Husayn Leicester</string>
    <string name="provider_uselocation">Times calculated based on your GPS location and may differ from local centre timings that may be based on observations rather than calculations</string>
    <string name="no_time_yet">Waiting...</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="location_dialog_message">When using the GPS location feature of this app, the app will ask you to give it permission to access the location of this phone. This app uses the location data to compute the Salaat times from your longitude and latitude. If you are unncomfortable with this, choose a named city from the list instead.</string>
    <string name="location_dialog_title">Location permission needed for GPS Location feature.</string>

</resources>
