<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SalaatTimes" >
    <item android:id="@+id/action_choosedate"
        android:icon="@drawable/ic_menu_today_no_date_holo_light"
        android:title="@string/action_choosedate"
        android:showAsAction="ifRoom" />
    <group android:id="@+id/menu_city"
        android:checkableBehavior="single">
        <item android:id="@+id/action_london"
            android:title="@string/action_london" />
        <item android:id="@+id/action_birmingham"
            android:title="@string/action_birmingham" />
        <item android:id="@+id/action_peterborough"
            android:title="@string/action_peterborough" />
        <item android:id="@+id/action_leicester"
            android:title="@string/action_leicester" />
        <item android:id="@+id/action_uselocation"
            android:title="@string/action_uselocation" />
    </group>
    <item android:title="Salaat Reminder">
        <menu>
            <item android:id="@+id/action_adhan"
                android:title="Play Adhan"
                android:checkable="true" />
            <item android:id="@+id/action_notifications"
                android:checkable="true"
                android:title="Remind for all" />
            <item android:id="@+id/action_fajr"
                android:title="Remind for Fajr"
                android:checkable="true"
                android:visible="true" />
            <item android:id="@+id/action_zohr"
                android:title="Remind for Zohr"
                android:checkable="true"
                android:visible="true" />
            <item android:id="@+id/action_maghrib"
                android:title="Remind for Maghrib"
                android:checkable="true"
                android:visible="true" />
        </menu>
    </item>

</menu>
